data/derived/fa15/progs/unify/prog3461.ml.out
Characters 349-352:
  | Power(a, b) -> if(a < 1.0 && a > -1.0 || b < 1.0 && b > -1.0) then 0.5 else a **. b
                          ^^^
Error: This expression has type float but an expression was expected of type
         expr
